# fink-crypto

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.py  info.txt
apps/: CMakeLists.txt
apps/cli/: CMakeLists.txt
apps/cli/src/: main.cpp
apps/example/: CMakeLists.txt
apps/example/src/: main.cpp
cmake/: CMakeFormat.cmake  ClangFormat.cmake  ClangTidy.cmake  Docs.cmake  LTO.cmake  Sanitizer.cmake  Warnings.cmake
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/fink/core/: exchange.hpp  id.hpp  price.hpp  quantity.hpp  quote.hpp  side.hpp  symbol.hpp  timestamp.hpp  trade.hpp
libs/market/: CMakeLists.txt
libs/market/include/fink/market/: book_level.hpp  book_side.hpp  book_snapshot.hpp  book_update.hpp  trade_tick.hpp
libs/orderbook/: CMakeLists.txt
libs/orderbook/include/fink/orderbook/: apply_error.hpp  book_top.hpp  order_book.hpp
libs/orderbook/src/: order_book.cpp
libs/orderbook/tests/: CMakeLists.txt  test_order_book.cpp
scripts/wsl/: bootstrap-venv.sh
tmp/: tmp.cpp
tools/: run-clang-format.py  run-clang-tidy.py  run-cmake-format.sh
